--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 development:
   adapter: postgresql
-  database: project_development
+  database: lightcloud_development
   pool: 5
   username: root
   password: root
@@ -18,12 +18,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: project_test
+  database: lightcloud_test
   pool: 5
   timeout: 5000
 
 production:
   adapter: postgresql
-  database: project_production
+  database: lightcloud_production
   pool: 5
   timeout: 5000
